Sliders renewed and  design bugs fixed

--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -3,11 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      href="../assets/photos/logo_red.svg"
-      type="image/x-icon"
-    />
     <!-- Reset Css -->
     <link rel="stylesheet" href="../css/reset.css" />
     <!-- Root Css -->
@@ -29,10 +24,12 @@
     <link rel="stylesheet" href="../css/footer.css" />
     <!-- Nav css -->
     <link rel="stylesheet" href="../css/joinUs.css" />
+    <!-- Slider -->
+    <link rel="stylesheet" href="../css/slick.css" />
+    <link rel="stylesheet" href="../css/slick-theme.css" />
     <!-- Catalog Css -->
     <link rel="stylesheet" href="../css/catalog.css" />
     <title>Catalog</title>
-    
   </head>
   <body>
     <section class="join_us_section" id="joinUsModal">
@@ -97,7 +94,6 @@
       </div>
     </header>
     <main class="w-100">
-      <!-- Section 1 -->
       <section class="sections section-1 w-100">
         <!-- Catagorie side of slider -->
         <div class="text-side">
@@ -106,233 +102,215 @@
             <button>All</button> <button>Fantastic</button>
             <button>Self-development</button> <button>Baby</button>
             <button>Classic</button>
+            <button>Classic</button>
+            <button>Classic</button>
+            <button>Classic</button>
+            <button>Classic</button>
+            <button>Classic</button>
           </div>
         </div>
         <!-- Slider -->
-        <div class="swiper">
-          <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_1.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_2.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_3.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_4.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_5.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_1.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
+        <div class="slider-1">
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
             </div>
           </div>
-
-          <div class="swiper-pagination"></div>
-
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-
-          <div class="swiper-scrollbar"></div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+        </div>
+        <div class="arrows">
+          <div class="prevArrow">
+            <img src="../assets/icons/prevArrow.svg" alt="" />
+          </div>
+          <div class="nextArrow">
+            <img src="../assets/icons/nextArrow.svg" alt="" />
+          </div>
         </div>
       </section>
-      <!-- Section 2 -->
       <section class="sections section-2 w-100">
         <!-- Catagorie side of slider -->
         <div>
           <h1 class="w-100 text-center best-seller">Bestseller</h1>
         </div>
         <!-- Slider -->
-        <div class="swiper">
-          <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_1.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_2.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_3.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_4.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_5.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card">
-                <img src="../assets/photos/book_1.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
+        <div class="slider-2">
+          <div>
+            <div class="slider-card">
+              <img   class="books-img"src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
             </div>
           </div>
-
-          <div class="swiper-pagination"></div>
-
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-
-          <div class="swiper-scrollbar"></div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card">
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+        </div>
+        <div class="arrows">
+          <div class="prevArrow-bestseller">
+            <img src="../assets/icons/prevArrow.svg" alt="" />
+          </div>
+          <div class="nextArrow-bestseller">
+            <img src="../assets/icons/nextArrow.svg" alt="" />
+          </div>
         </div>
       </section>
-      <!-- Section 3 -->
       <section class="sections section-3 w-100">
         <!-- Catagorie side of slider -->
         <div>
           <h1 class="w-100 text-center new-releases">New releases</h1>
         </div>
-        <div class="swiper w-100">
-          <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide">
-              <div class="slider-card new-book">
-                <img
-                  class="new-icon"
-                  src="../assets/icons/new-icon.svg"
-                  alt=""
-                />
-                <img src="../assets/photos/book_1.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card new-book">
-                <img
-                  class="new-icon"
-                  src="../assets/icons/new-icon.svg"
-                  alt=""
-                />
-                <img src="../assets/photos/book_2.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card new-book">
-                <img
-                  class="new-icon"
-                  src="../assets/icons/new-icon.svg"
-                  alt=""
-                />
-                <img src="../assets/photos/book_3.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card new-book">
-                <img
-                  class="new-icon"
-                  src="../assets/icons/new-icon.svg"
-                  alt=""
-                />
-                <img src="../assets/photos/book_4.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card new-book">
-                <img
-                  class="new-icon"
-                  src="../assets/icons/new-icon.svg"
-                  alt=""
-                />
-                <img src="../assets/photos/book_5.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider-card new-book">
-                <img
-                  class="new-icon"
-                  src="../assets/icons/new-icon.svg"
-                  alt=""
-                />
-                <img src="../assets/photos/book_1.svg" alt="" />
-                <p>Order in Chaos</p>
-                <p>Konstantin Koptelov</p>
-                <button>Read more</button>
-              </div>
+        <div class="slider-3">
+          <div>
+            <div class="slider-card new-book">
+              <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
             </div>
           </div>
-
-          <div class="swiper-pagination"></div>
-
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-
-          <div class="swiper-scrollbar"></div>
+          <div>
+            <div class="slider-card new-book">
+              <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card new-book">
+              <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card new-book">
+              <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card new-book">
+              <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card new-book">
+              <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+          <div>
+            <div class="slider-card new-book">
+              <img  class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
+              <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
+              <p>Order in Chaos</p>
+              <p>Konstantin Koptelov</p>
+              <button>Read more</button>
+            </div>
+          </div>
+        </div>
+        <div class="arrows">
+          <div class="prevArrow-new">
+            <img src="../assets/icons/prevArrow.svg" alt="" />
+          </div>
+          <div class="nextArrow-new">
+            <img src="../assets/icons/nextArrow.svg" alt="" />
+          </div>
         </div>
       </section>
     </main>
@@ -403,7 +381,9 @@
       </div>
     </footer>
     <!-- Slider js Cdn -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script> -->
+    <script src="../js/jquery-3-7-1-min.js"></script>
+    <script src="../js/slick.min.js"></script>
     <!-- Catalog js -->
     <script src="../js/catalog.js"></script>
     <!-- Join us -->
