--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -29,6 +29,11 @@
     <link rel="stylesheet" href="../css/slick-theme.css" />
     <!-- Catalog Css -->
     <link rel="stylesheet" href="../css/catalog.css" />
+    <link
+      rel="icon"
+      href="../assets/photos/logo_red.svg"
+      type="image/x-icon"
+    />
     <title>Catalog</title>
   </head>
   <body>
