--- a/src/pages/AdminPanel.html
+++ b/src/pages/AdminPanel.html
@@ -47,6 +47,7 @@
             <aside>
                 <div id="second_admin_logo">
                     <img src="../assets/photos/logo-white.svg" alt="logo" width="282.59px">
+                    <img src="../assets/photos/close.svg" alt="close" style="width: 25px;" id="closeBtn">
                     <!-- <img src="./img/book-white-logo.svg" alt="logo">
                     <div class="logo-content">
                         <h2>LIBRARY</h2>
@@ -62,19 +63,19 @@
                         </li>
                         <li>
                             <img src="../assets/photos/book-white-logo.svg" alt="book">
-                            <a href="#">Books</a>
+                            <a href="#bookForm">Books</a>
                         </li>
                         <li>
                             <img src="../assets/photos/book-white-logo.svg" alt="book">
-                            <a href="#">About</a>
+                            <a href="#aboutStore">About</a>
                         </li>
                         <li>
                             <img src="../assets/photos/book-white-logo.svg" alt="book">
-                            <a href="#">Join Us</a>
+                            <a href="#joinUS">Join Us</a>
                         </li>
                         <li>
                             <img src="../assets/photos/book-white-logo.svg" alt="book">
-                            <a href="#">Contact</a>
+                            <a href="#bookContent">Contact</a>
                         </li>
                         <li>
                             <img src="../assets/photos/book-white-logo.svg" alt="book">
@@ -84,6 +85,48 @@
                 </div>
             </aside>
         </section>
+
+        <section class="left" id="left-first">
+            <aside>
+                <div id="second_admin_logo">
+                    <img src="../assets/photos/logo-white.svg" alt="logo" width="282.59px">
+                    <img src="../assets/photos/close.svg" alt="close" style="width: 25px;" id="closeBtn">
+
+                </div>
+                <div class="list">
+                    <ul>
+                        <li>
+                            <img src="../assets/photos/book-white-logo.svg" alt="book">
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <img src="../assets/photos/book-white-logo.svg" alt="book">
+                            <a href="#bookForm">Books</a>
+                        </li>
+                        <li>
+                            <img src="../assets/photos/book-white-logo.svg" alt="book">
+                            <a href="#aboutStore">About</a>
+                        </li>
+                        <li>
+                            <img src="../assets/photos/book-white-logo.svg" alt="book">
+                            <a href="#joinUS">Join Us</a>
+                        </li>
+                        <li>
+                            <img src="../assets/photos/book-white-logo.svg" alt="book">
+                            <a href="#bookContent">Contact</a>
+                        </li>
+                        <li>
+                            <img src="../assets/photos/book-white-logo.svg" alt="book">
+                            <a href="#">Logout</a>
+                        </li>
+                    </ul>
+                </div>
+            </aside>
+        </section>
+
+
+
+
 
 
         <section class="right">
@@ -101,7 +144,7 @@
             <div class="account-logo">
                 <div class="profile-admin" style="cursor: pointer;">
                     <img src="../assets/photos/user.svg" alt="user">
-                    <p>Admin</p>
+                    <p style="margin: 0;">Admin</p>
                 </div>
             </div>
 
@@ -132,7 +175,7 @@
                     </div>
                 </div>
 
-                <section class="book-form">
+                <section class="book-form" id="bookForm">
                     <h3>Book form</h3>
                     <div class="book-form-container">
                         <div>
@@ -163,7 +206,7 @@
                 </section>
 
 
-                <section class="about-store">
+                <section class="about-store" id="aboutStore">
                     <h4>About Store</h4>
                     <div class="about-store-container">
                         <div>
@@ -186,7 +229,7 @@
 
             </section>
 
-            <section class="join-us">
+            <section class="join-us" id="joinUS">
                 <h5>Join Us</h5>
                 <div class="join-us-table">
                     <table>
@@ -234,7 +277,7 @@
                         <tr class="bg-white">
                             <td>1</td>
                             <td>
-                                <div class="d-flex align-items-center justify-content-center gap-2">
+                                <div id="bookContent" class="d-flex align-items-center justify-content-center gap-2">
                                     <img src="../assets/photos/image 8.jpg" alt="image-book">
                                     <p>Angels</p>
                                 </div>
