fix the bugs in search.html

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           <li><a href="./index.html" class="nav_active_li">Home</a></li>
           <li><a href="./src/pages/catalog.html">Catalog</a></li>
           <li><a href="./src/pages/about.html">About Store</a></li>
-          <li><a href="">Contact Us</a></li>
-          <li><a href="">Search</a></li>
+          <li><a href="./src/pages/contact.html">Contact Us</a></li>
+          <li><a href="./src/pages/search.html">Search</a></li>
         </ul>
       </div>
     </section>
@@ -69,8 +69,8 @@
           <li><a href="./index.html" class="nav_active_a">Home</a></li>
           <li><a href="./src/pages/catalog.html">Catalog</a></li>
           <li><a href="./src/pages/about.html">About Store</a></li>
-          <li><a href="">Contact Us</a></li>
-          <li><a href="">Search</a></li>
+          <li><a href="./src/pages/contact.html">Contact Us</a></li>
+          <li><a href="./src/pages/search.html">Search</a></li>
         </ul>
       </div>
 
@@ -181,8 +181,8 @@
           <li><a href="./index.html">Home</a></li>
           <li><a href="./src/pages/catalog.html">Catalog</a></li>
           <li><a href="./src/pages/about.html">About Store</a></li>
-          <li><a href="">Contact Us</a></li>
-          <li><a href="">Search</a></li>
+          <li><a href="./src/pages/contact.html">Contact Us</a></li>
+          <li><a href="./src/pages/search.html">Search</a></li>
         </ul>
         <!--  -->
         <div class="footer_items_container">
