--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -49,8 +49,8 @@
           <li><a href="../../index.html">Home</a></li>
           <li><a href="./catalog.html">Catalog</a></li>
           <li><a class="nav_active_li" href="./about.html">About Store</a></li>
-          <li><a href="">Contact Us</a></li>
-          <li><a href="">Search</a></li>
+          <li><a href="./contact.html">Contact Us</a></li>
+          <li><a href="./search.html">Search</a></li>
         </ul>
       </div>
     </section>
@@ -72,8 +72,8 @@
           <li><a href="../../index.html">Home</a></li>
           <li><a href="./catalog.html">Catalog</a></li>
           <li><a href="./about.html" class="nav_active_a">About Store</a></li>
-          <li><a href="">Contact Us</a></li>
-          <li><a href="">Search</a></li>
+          <li><a href="./contact.html">Contact Us</a></li>
+          <li><a href="./search.html">Search</a></li>
         </ul>
       </div>
 
@@ -134,8 +134,8 @@
           <li><a href="../../index.html">Home</a></li>
           <li><a href="./catalog.html">Catalog</a></li>
           <li><a href="./about.html">About Store</a></li>
-          <li><a href="">Contact Us</a></li>
-          <li><a href="">Search</a></li>
+          <li><a href="./contact.html">Contact Us</a></li>
+          <li><a href="./search.html">Search</a></li>
         </ul>
         <!--  -->
         <div class="footer_items_container">
