--- a/src/pages/book.html
+++ b/src/pages/book.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-    rel="icon"
-    href="../assets/photos/logo_red.svg"
-    type="image/x-icon"
-  />
+    <link rel="icon" href="../assets/photos/logo_red.svg" type="image/x-icon" />
     <title>Detail</title>
     <!-- Reset CSS -->
     <link rel="stylesheet" href="../css/reset.css" />
@@ -55,10 +51,10 @@
         <span class="close" id="closeResponsiveModal">&times;</span>
         <ul class="responsive_modal_ul">
           <li><a href="../../index.html">Home</a></li>
-          <li><a href="./catalog.html">Catalog</a></li>
-          <li><a class="nav_active_li" href="./about.html">About Store</a></li>
-          <li><a href="">Contact Us</a></li>
-          <li><a href="">Search</a></li>
+          <li><a class="nav_active_li" href="./catalog.html">Catalog</a></li>
+          <li><a href="./about.html">About Store</a></li>
+          <li><a href="./contact.html">Contact Us</a></li>
+          <li><a href="./search.html">Search</a></li>
         </ul>
       </div>
     </section>
@@ -80,8 +76,8 @@
           <li><a href="../../index.html">Home</a></li>
           <li><a href="./catalog.html">Catalog</a></li>
           <li><a href="./about.html" class="nav_active_a">About Store</a></li>
-          <li><a href="">Contact Us</a></li>
-          <li><a href="">Search</a></li>
+          <li><a href="./contact.html">Contact Us</a></li>
+          <li><a href="./search.html">Search</a></li>
         </ul>
       </div>
 
@@ -142,46 +138,46 @@
             <div class="bookComment">
               <form>
                 <div class="form">
-                <input
-                  class="anonimComment"
-                  type="text"
-                  placeholder="Your anonim comment..."
-                />
-                <button type="submit" class="commentAdd">
-                  <img
-                    class="commentAddIcon"
-                    src="../assets/photos/send.svg"
-                    alt=""
+                  <input
+                    class="anonimComment"
+                    type="text"
+                    placeholder="Your anonim comment..."
                   />
-                </button>
-                <div class="errorBox"></div>
-                <div class="userComment">
-                  <ul class="userCommentUl">
-                    <li class="userCommentLi">
-                      <p>
-                        <span class="anonim">anonim </span>
-                        <span> 18:32 today</span>
-                      </p>
-                      <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing
-                        elit. Odio, quibusdam ratione quidem asperiores
-                        accusantium odit.
-                      </p>
-                    </li>
-                    <li class="userCommentLi">
-                      <p>
-                        <span class="anonim">anonim </span>
-                        <span> 2 days ago</span>
-                      </p>
-                      <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing
-                        elit. Odio, quibusdam ratione quidem asperiores
-                        accusantium odit.
-                      </p>
-                    </li>
-                  </ul>
+                  <button type="submit" class="commentAdd">
+                    <img
+                      class="commentAddIcon"
+                      src="../assets/photos/send.svg"
+                      alt=""
+                    />
+                  </button>
+                  <div class="errorBox"></div>
+                  <div class="userComment">
+                    <ul class="userCommentUl">
+                      <!-- <li class="userCommentLi">
+                        <p>
+                          <span class="anonim">anonim </span>
+                          <span> 18:32 today</span>
+                        </p>
+                        <p>
+                          Lorem ipsum dolor sit amet consectetur, adipisicing
+                          elit. Odio, quibusdam ratione quidem asperiores
+                          accusantium odit.
+                        </p>
+                      </li>
+                      <li class="userCommentLi">
+                        <p>
+                          <span class="anonim">anonim </span>
+                          <span> 2 days ago</span>
+                        </p>
+                        <p>
+                          Lorem ipsum dolor sit amet consectetur, adipisicing
+                          elit. Odio, quibusdam ratione quidem asperiores
+                          accusantium odit.
+                        </p>
+                      </li> -->
+                    </ul>
+                  </div>
                 </div>
-              </div>
               </form>
             </div>
           </div>
@@ -196,6 +192,7 @@
         </div>
       </div>
     </div>
+
     <footer class="footer">
       <section class="footer_icons_section">
         <p>Follow us on social media</p>
@@ -219,8 +216,8 @@
           <li><a href="../../index.html">Home</a></li>
           <li><a href="./catalog.html">Catalog</a></li>
           <li><a href="./about.html">About Store</a></li>
-          <li><a href="">Contact Us</a></li>
-          <li><a href="">Search</a></li>
+          <li><a href="./contact.html">Contact Us</a></li>
+          <li><a href="./search.html">Search</a></li>
         </ul>
         <!--  -->
         <div class="footer_items_container">
