--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -58,8 +58,8 @@
           <li><a href="../../index.html">Home</a></li>
           <li><a class="nav_active_li" href="./catalog.html">Catalog</a></li>
           <li><a href="./about.html">About Store</a></li>
-          <li><a href="">Contact Us</a></li>
-          <li><a href="">Search</a></li>
+          <li><a href="./contact.html">Contact Us</a></li>
+          <li><a href="./search.html">Search</a></li>
         </ul>
       </div>
     </section>
@@ -81,8 +81,8 @@
           <li><a href="../../index.html">Home</a></li>
           <li><a href="./catalog.html" class="nav_active_a">Catalog</a></li>
           <li><a href="./about.html">About Store</a></li>
-          <li><a href="">Contact Us</a></li>
-          <li><a href="">Search</a></li>
+          <li><a href="./contact.html">Contact Us</a></li>
+          <li><a href="./search.html">Search</a></li>
         </ul>
       </div>
 
@@ -342,8 +342,8 @@
           <li><a href="../../index.html">Home</a></li>
           <li><a href="./catalog.html">Catalog</a></li>
           <li><a href="./about.html">About Store</a></li>
-          <li><a href="">Contact Us</a></li>
-          <li><a href="">Search</a></li>
+          <li><a href="./contact.html">Contact Us</a></li>
+          <li><a href="./search.html">Search</a></li>
         </ul>
         <!--  -->
         <div class="footer_items_container">
