--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -47,7 +47,7 @@
           <li><a href="./catalog.html">Catalog</a></li>
           <li><a href="./about.html">About Store</a></li>
           <li><a class="nav_active_li" href="./contact.html">Contact Us</a></li>
-          <li><a href="">Search</a></li>
+          <li><a href="./search.html">Search</a></li>
         </ul>
       </div>
     </section>
@@ -70,7 +70,7 @@
           <li><a href="./catalog.html">Catalog</a></li>
           <li><a href="./about.html">About Store</a></li>
           <li><a class="nav_active_a" href="./contact.html">Contact Us</a></li>
-          <li><a href="">Search</a></li>
+          <li><a href="./search.html">Search</a></li>
         </ul>
       </div>
 
@@ -86,7 +86,7 @@
         </button>
       </div>
     </header>
-    <!---FORUM CONTACT-->
+    <!---FORM CONTACT-->
     <main class="contact_main">
       <div class="container mx-auto p-0">
         <div class="p-div">
@@ -149,7 +149,7 @@
           <li><a href="./catalog.html">Catalog</a></li>
           <li><a href="./about.html">About Store</a></li>
           <li><a href="./contact.html">Contact Us</a></li>
-          <li><a href="">Search</a></li>
+          <li><a href="./search.html">Search</a></li>
         </ul>
         <!--  -->
         <div class="footer_items_container">
