--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -12,87 +12,80 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
     />
+    <!-- Reset css -->
     <link rel="stylesheet" href="../css/reset.css" />
+    <!-- Root css -->
     <link rel="stylesheet" href="../css/root.css" />
-     <!-- Footer css -->
-     <link rel="stylesheet" href="../css/footer.css" />
-     <!-- Nav css -->
-     <link rel="stylesheet" href="../css/joinUs.css" />
+    <!-- Footer css -->
+    <link rel="stylesheet" href="../css/footer.css" />
+    <!-- Nav css -->
+    <link rel="stylesheet" href="../css/joinUs.css" />
     <link rel="stylesheet" href="../css/search.css" />
-    <link
-      rel="icon"
-      href="../assets/photos/logo_red.svg"
-      type="image/x-icon"
-    />
-
+    <link rel="icon" href="../assets/photos/logo_red.svg" type="image/x-icon" />
     <title>Search</title>
   </head>
-
   <body>
-
-
     <section class="join_us_section" id="joinUsModal">
-        <div class="modal_content">
-          <span class="close_join_us">&times;</span>
-          <div class="modal_inner_div">
-            <p>Join Us</p>
-            <input id="joinUsFullname" type="text" placeholder="Fullname" />
-            <input id="joinUsEmail" type="email" placeholder="E-mail" />
-            <p id="modalErrorMessage">Fill in the fields corectly!</p>
-            <button id="join">Join</button>
-          </div>
+      <div class="modal_content">
+        <span class="close_join_us">&times;</span>
+        <div class="modal_inner_div">
+          <p>Join Us</p>
+          <input id="joinUsFullname" type="text" placeholder="Fullname" />
+          <input id="joinUsEmail" type="email" placeholder="E-mail" />
+          <p id="modalErrorMessage">Fill in the fields corectly!</p>
+          <button id="join">Join</button>
         </div>
-      </section>
-  
-      <!-- modal for responsive -->
-      <section class="modal_for_responsive" id="responsiveModal">
-        <div class="responsive_modal_content">
-          <span class="close" id="closeResponsiveModal">&times;</span>
-          <ul class="responsive_modal_ul">
-            <li><a href="../../index.html">Home</a></li>
-            <li><a href="./catalog.html">Catalog</a></li>
-            <li><a  href="./about.html">About Store</a></li>
-            <li><a href="./contact.html">Contact Us</a></li>
-            <li><a class="nav_active_li" href="./search.html">Search</a></li>
-          </ul>
-        </div>
-      </section>
-  
-      <!-- header -->
-  
-      <header class="navbar">
-        <div class="logo_div">
-          <img src="../assets/photos/logo_red.svg" alt="logo" />
-          <div class="logo_title">
-            <h1>LIBRARY</h1>
-            <hr />
-            <p>book store</p>
-          </div>
-        </div>
-  
-        <div class="list_div">
-          <ul class="nav_items">
-            <li><a href="../../index.html">Home</a></li>
-            <li><a href="./catalog.html">Catalog</a></li>
-            <li><a href="./about.html" >About Store</a></li>
-            <li><a href="./contact.html">Contact Us</a></li>
-            <li><a class="nav_active_a" href="./search.html">Search</a></li>
-          </ul>
-        </div>
-  
-        <div class="join_div">
-          <img
-            id="joinUsIcon"
-            src="../assets/icons/personal_icon.svg"
-            alt="personal_icon"
-          />
-          <button id="joinUsBtn">Join Us</button>
-          <button id="hamburgerMenu">
-            <img src="../assets/icons/hamburger_menu.png" alt="hamburger" />
-          </button>
-        </div>
-      </header>
+      </div>
+    </section>
 
+    <!-- modal for responsive -->
+    <section class="modal_for_responsive" id="responsiveModal">
+      <div class="responsive_modal_content">
+        <span class="close" id="closeResponsiveModal">&times;</span>
+        <ul class="responsive_modal_ul">
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="./catalog.html">Catalog</a></li>
+          <li><a href="./about.html">About Store</a></li>
+          <li><a href="./contact.html">Contact Us</a></li>
+          <li><a class="nav_active_li" href="./search.html">Search</a></li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- header -->
+
+    <header class="navbar">
+      <div class="logo_div">
+        <img src="../assets/photos/logo_red.svg" alt="logo" />
+        <div class="logo_title">
+          <h1>LIBRARY</h1>
+          <hr />
+          <p>book store</p>
+        </div>
+      </div>
+
+      <div class="list_div">
+        <ul class="nav_items">
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="./catalog.html">Catalog</a></li>
+          <li><a href="./about.html">About Store</a></li>
+          <li><a href="./contact.html">Contact Us</a></li>
+          <li><a class="nav_active_a" href="./search.html">Search</a></li>
+        </ul>
+      </div>
+
+      <div class="join_div">
+        <img
+          id="joinUsIcon"
+          src="../assets/icons/personal_icon.svg"
+          alt="personal_icon"
+        />
+        <button id="joinUsBtn">Join Us</button>
+        <button id="hamburgerMenu">
+          <img src="../assets/icons/hamburger_menu.png" alt="hamburger" />
+        </button>
+      </div>
+    </header>
 
     <main class="main">
       <section class="container">
@@ -116,11 +109,15 @@
             <div class="swiper-slide">
               <div class="box2">
                 <div class="book1">
-                  <img class="book" src="../assets/photos/book_1.svg" alt="book" />
+                  <img
+                    class="book"
+                    src="../assets/photos/book_1.svg"
+                    alt="book"
+                  />
                 </div>
 
                 <div class="book_title">
-                  <h2  class="book_name">Order in Chaos</h2>
+                  <h2 class="book_name">Order in Chaos</h2>
                   <p class="author">Konstantin Koptelov</p>
                   <p class="title">
                     We work without holidays and weekends! Residents of Kiev can
@@ -138,11 +135,15 @@
             <div class="swiper-slide">
               <div class="box2">
                 <div class="book1">
-                  <img class="book" src="../assets/photos/book_1.svg" alt="book" />
+                  <img
+                    class="book"
+                    src="../assets/photos/book_1.svg"
+                    alt="book"
+                  />
                 </div>
 
                 <div class="book_title">
-                  <h2  class="book_name">Order in Chaos</h2>
+                  <h2 class="book_name">Order in Chaos</h2>
                   <p class="author">Konstantin Koptelov</p>
                   <p class="title">
                     We work without holidays and weekends! Residents of Kiev can
@@ -160,7 +161,11 @@
             <div class="swiper-slide">
               <div class="box2">
                 <div class="book1">
-                  <img class="book" src="../assets/photos/book_1.svg" alt="book" />
+                  <img
+                    class="book"
+                    src="../assets/photos/book_1.svg"
+                    alt="book"
+                  />
                 </div>
 
                 <div class="book_title">
@@ -180,89 +185,83 @@
               </div>
             </div>
           </div>
-      
 
           <!-- If we need navigation buttons -->
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
-
         </div>
-
-
-
       </section>
     </main>
 
-
     <footer class="footer">
-        <section class="footer_icons_section">
-          <p>Follow us on social media</p>
-          <div class="footer_icons_div">
-            <img src="../assets/icons/facebookicon.svg" alt="facebookicon" />
-            <img src="../assets/icons/twettericon.svg" alt="twettericon" />
-            <img src="../assets/icons/instagramicon.svg" alt="instagramicon" />
-          </div>
-        </section>
-        <section class="footer_copywriter_section">
-          <div class="footer_logo_div">
-            <img src="../assets/photos/logo.svg" alt="logo" />
-            <div class="footer_logo_title">
-              <h5>LIBRARY</h5>
-              <hr />
-              <h6>BOOK STORE</h6>
-            </div>
-          </div>
-          <!-- for responsive -->
-          <ul class="footer_nav_items">
-            <li><a href="../../index.html">Home</a></li>
-            <li><a href="./catalog.html">Catalog</a></li>
-            <li><a href="./about.html">About Store</a></li>
-            <li><a href="./contact.html">Contact Us</a></li>
-            <li><a href="./search.html">Search</a></li>
-          </ul>
-          <!--  -->
-          <div class="footer_items_container">
-            <div class="footer_popular_items">
-              <ul>
-                <span class="footer_items_title">Popular</span>
-                <li>Programming</li>
-                <li>Books for children</li>
-                <li>Psychology</li>
-                <li>Business</li>
-              </ul>
-            </div>
-  
-            <div class="footer_cash_items">
-              <ul>
-                <span class="footer_items_title">Cash</span>
-                <li>Delivery</li>
-                <li>Payment</li>
-                <li>About the store</li>
-              </ul>
-            </div>
-  
-            <div class="footer_help_items">
-              <ul>
-                <span class="footer_items_title">Help</span>
-                <li>Contacts</li>
-                <li>Purchase returns</li>
-                <li>Buyer help</li>
-              </ul>
-            </div>
-  
-            <div class="footer_contact_div">
-              <p>+994 50 123-45-67</p>
-              <a href="tel:+994501234567">Request a call</a>
-            </div>
-          </div>
-        </section>
-        <div class="copywriter_text">
-          All rights reserved © 2003-2021 LIBRARY TERMS OF USE | Privacy Policy
+      <section class="footer_icons_section">
+        <p>Follow us on social media</p>
+        <div class="footer_icons_div">
+          <img src="../assets/icons/facebookicon.svg" alt="facebookicon" />
+          <img src="../assets/icons/twettericon.svg" alt="twettericon" />
+          <img src="../assets/icons/instagramicon.svg" alt="instagramicon" />
         </div>
-      </footer>
-      <script src="../js/hamburger.js"></script>
-      <script src="../js/joinUs.js"></script>
-     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="./search.js"></script> 
+      </section>
+      <section class="footer_copywriter_section">
+        <div class="footer_logo_div">
+          <img src="../assets/photos/logo.svg" alt="logo" />
+          <div class="footer_logo_title">
+            <h5>LIBRARY</h5>
+            <hr />
+            <h6>BOOK STORE</h6>
+          </div>
+        </div>
+        <!-- for responsive -->
+        <ul class="footer_nav_items">
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="./catalog.html">Catalog</a></li>
+          <li><a href="./about.html">About Store</a></li>
+          <li><a href="./contact.html">Contact Us</a></li>
+          <li><a href="./search.html">Search</a></li>
+        </ul>
+        <!--  -->
+        <div class="footer_items_container">
+          <div class="footer_popular_items">
+            <ul>
+              <span class="footer_items_title">Popular</span>
+              <li>Programming</li>
+              <li>Books for children</li>
+              <li>Psychology</li>
+              <li>Business</li>
+            </ul>
+          </div>
+
+          <div class="footer_cash_items">
+            <ul>
+              <span class="footer_items_title">Cash</span>
+              <li>Delivery</li>
+              <li>Payment</li>
+              <li>About the store</li>
+            </ul>
+          </div>
+
+          <div class="footer_help_items">
+            <ul>
+              <span class="footer_items_title">Help</span>
+              <li>Contacts</li>
+              <li>Purchase returns</li>
+              <li>Buyer help</li>
+            </ul>
+          </div>
+
+          <div class="footer_contact_div">
+            <p>+994 50 123-45-67</p>
+            <a href="tel:+994501234567">Request a call</a>
+          </div>
+        </div>
+      </section>
+      <div class="copywriter_text">
+        All rights reserved © 2003-2021 LIBRARY TERMS OF USE | Privacy Policy
+      </div>
+    </footer>
+    <script src="../js/hamburger.js"></script>
+    <script src="../js/joinUs.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="./search.js"></script>
   </body>
 </html>
