completed contact js for fire base

--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -98,6 +98,7 @@
         </button>
       </div>
     </header>
+    
     <main class="w-100">
       <section class="sections section-1 w-100">
         <!-- Catagorie side of slider -->
@@ -105,18 +106,19 @@
           <h1>All Books</h1>
           <div class="slider-catagories">
             <button>All</button> <button>Fantastic</button>
-            <button>Self-development</button> <button>Baby</button>
+            <button>Self-development</button> 
+            <button>Baby</button>
             <button>Classic</button>
-            <button>Classic</button>
-            <button>Classic</button>
-            <button>Classic</button>
-            <button>Classic</button>
-            <button>Classic</button>
+            <button>TEST 1</button>
+            <button>TEST 2</button>
+            <button>TEST 3</button>
+            <button>TEST 4</button>
+            <button>TEST 5</button>
           </div>
         </div>
         <!-- Slider -->
         <div class="slider-1">
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card">
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
               <p>Order in Chaos</p>
@@ -124,7 +126,7 @@
               <button>Read more</button>
             </div>
           </div>
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card">
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
               <p>Order in Chaos</p>
@@ -132,7 +134,7 @@
               <button>Read more</button>
             </div>
           </div>
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card">
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
               <p>Order in Chaos</p>
@@ -140,7 +142,7 @@
               <button>Read more</button>
             </div>
           </div>
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card">
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
               <p>Order in Chaos</p>
@@ -148,7 +150,7 @@
               <button>Read more</button>
             </div>
           </div>
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card">
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
               <p>Order in Chaos</p>
@@ -156,7 +158,7 @@
               <button>Read more</button>
             </div>
           </div>
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card">
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
               <p>Order in Chaos</p>
@@ -181,7 +183,7 @@
         </div>
         <!-- Slider -->
         <div class="slider-2">
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card">
               <img   class="books-img"src="../assets/photos/book_1.svg" alt="" />
               <p>Order in Chaos</p>
@@ -189,7 +191,7 @@
               <button>Read more</button>
             </div>
           </div>
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card">
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
               <p>Order in Chaos</p>
@@ -197,7 +199,7 @@
               <button>Read more</button>
             </div>
           </div>
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card">
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
               <p>Order in Chaos</p>
@@ -205,7 +207,7 @@
               <button>Read more</button>
             </div>
           </div>
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card">
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
               <p>Order in Chaos</p>
@@ -213,7 +215,7 @@
               <button>Read more</button>
             </div>
           </div>
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card">
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
               <p>Order in Chaos</p>
@@ -221,7 +223,7 @@
               <button>Read more</button>
             </div>
           </div>
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card">
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
               <p>Order in Chaos</p>
@@ -245,7 +247,7 @@
           <h1 class="w-100 text-center new-releases">New releases</h1>
         </div>
         <div class="slider-3">
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card new-book">
               <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
@@ -254,7 +256,7 @@
               <button>Read more</button>
             </div>
           </div>
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card new-book">
               <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
@@ -263,7 +265,7 @@
               <button>Read more</button>
             </div>
           </div>
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card new-book">
               <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
@@ -272,7 +274,7 @@
               <button>Read more</button>
             </div>
           </div>
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card new-book">
               <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
@@ -281,7 +283,7 @@
               <button>Read more</button>
             </div>
           </div>
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card new-book">
               <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
@@ -290,7 +292,7 @@
               <button>Read more</button>
             </div>
           </div>
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card new-book">
               <img class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
@@ -299,7 +301,7 @@
               <button>Read more</button>
             </div>
           </div>
-          <div>
+          <div class="slider_main_card">
             <div class="slider-card new-book">
               <img  class="new-icon" src="../assets/icons/new-icon.svg" alt="" />
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
@@ -319,6 +321,7 @@
         </div>
       </section>
     </main>
+
     <footer class="footer">
       <section class="footer_icons_section">
         <p>Follow us on social media</p>
