--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
           <p>Join Us</p>
           <input id="joinUsFullname" type="text" placeholder="Fullname" />
           <input id="joinUsEmail" type="email" placeholder="E-mail" />
-          <p id="modalErrorMessage">Fill in the fields corectly!</p>
+          <p id="modalErrorMessage">Fill in the fields correctly!</p>
+          <p id="modalSuccessMessage">Successfully!</p>
           <button id="join">Join</button>
         </div>
       </div>
